Agrego estilos a botones

--- a/Views/Home/Notas.cshtml
+++ b/Views/Home/Notas.cshtml
@@ -35,11 +35,11 @@
             <textarea name="texto"cols="30" rows="3"></textarea>
         </div>
     </div>   
-    <button type="submit">Agregar nota</button>
+    <button type="submit" class="btn btn-dark">Agregar nota</button>
     </form>
     <br>
     <form action='@Url.Action("SacarUsuarioEnSesion", "Home")'>
-        <button type="submit">Salir</button>
+        <button type="submit" class="btn btn-dark">Salir</button>
     </form>
 </div>
 
